--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Pizza</title>
+  <title>Pizza Planet</title>
 </head>
 <body>
+  <h1>Welcome to Pizza Planet</h1>
+  <div class="container">
+    <form id="pizza-select">
+      <div class="form-group">
+        <h2>Build your Out of This World Pizza</h2>
+        <h3>Select Toppings</h3>
+        <label><input type="radio" name="toppings" value="premium toppings" checked></label>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
