--- a/index.html
+++ b/index.html
@@ -16,8 +16,44 @@
     <form id="pizza-select">
       <div class="form-group">
         <h2>Build your Out of This World Pizza</h2>
-        <h3>Select Toppings</h3>
-        <label><input type="radio" name="toppings" value="premium toppings" checked></label>
+        <h3>Select Your First Topping</h3>
+        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Mushroom"></label>
+        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
+        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
+        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+      </div>
+      <div class="form-group">
+        <h3>Select Your Second Topping</h3>
+        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Mushroom"></label>
+        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
+        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
+        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+      </div>
+      <div class="form-group">
+        <h3>Select Your Third Topping</h3>
+        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Mushroom"></label>
+        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
+        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
+        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+      </div>
+      <div class="form-group">
+        <h3>Select Your Fourth Topping</h3>
+        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Mushroom"></label>
+        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
+        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
+        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+      </div>
+      <div class="form-group">
+        <h3>Select Your Fifth Topping</h3>
+        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Mushroom"></label>
+        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
+        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
+        <label><input type="radio" name="topping1" value="Jalapeno"></label>
       </div>
     </form>
   </div>
