add if else statements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <h2>Build your Out of This World Pizza</h2>
         <h3>Select Your First Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" checked></label>
+        <label><input type="radio" name="topping1" value="Onion" ></label>
         <label><input type="radio" name="topping1" value="Mushroom"></label>
         <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
         <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
@@ -56,6 +56,15 @@
         <label><input type="radio" name="topping1" value="Jalapeno"></label>
       </div>
     </form>
+    <div id="pizza-cost">
+      <p><strong>topping1:</strong> <span class="topping1"></span></p>
+      <p><strong>topping2:</strong> <span class="topping2"></span></p>
+      <p><strong>topping3: </strong> <span class="topping3"></span></p>
+      <p><strong>topping4: </strong> <span class="topping4"></span></p>
+      <p><strong>topping5: </strong> <span class="topping5"></span></p>
+      <p><strong>Pizza Size</strong><span class="pizza size"></span></p>
+      <p><strong>Cost: </strong> <span class="cost"></span></p>
+    </div>
   </div>
 </body>
 </html>
