--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
       <div class="form-group">
         <h2>Build your Out of This World Pizza</h2>
         <h3>Select Your First Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" ></label>
-        <label><input type="radio" name="topping1" value="Mushroom"></label>
-        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
-        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
-        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+        <label><input type="radio" name="topping1" value="Onion" >Onion</label>
+        <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
+        <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
+        <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
+        <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
         <h3>Select Your Second Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" checked></label>
-        <label><input type="radio" name="topping1" value="Mushroom"></label>
-        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
-        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
-        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+        <label><input type="radio" name="topping1" value="Onion" >Onion</label>
+        <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
+        <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
+        <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
+        <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
         <h3>Select Your Third Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" checked></label>
-        <label><input type="radio" name="topping1" value="Mushroom"></label>
-        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
-        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
-        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+        <label><input type="radio" name="topping1" value="Onion">Onion</label>
+        <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
+        <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
+        <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
+        <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
         <h3>Select Your Fourth Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" checked></label>
-        <label><input type="radio" name="topping1" value="Mushroom"></label>
-        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
-        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
-        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+        <label><input type="radio" name="topping1" value="Onion" >Onion</label>
+        <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
+        <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
+        <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
+        <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
         <h3>Select Your Fifth Topping</h3>
-        <label><input type="radio" name="topping1" value="Onion" checked></label>
-        <label><input type="radio" name="topping1" value="Mushroom"></label>
-        <label><input type="radio" name="topping1" value="Black Olive"></label> <label><input type="radio" name="topping1" value="Onion"></label>
-        <label><input type="radio" name="topping1" value="Green Bell Pepper"></label>
-        <label><input type="radio" name="topping1" value="Jalapeno"></label>
+        <label><input type="radio" name="topping1" value="Onion">Onion</label>
+        <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
+        <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
+        <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
+        <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
     </form>
     <div id="pizza-cost">
