--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <form id="pizza-select">
       <div class="form-group">
         <h2>Build your Out of This World Pizza</h2>
-        <h3>Select Your First Topping</h3>
+        <h4>Select Pizza Size</h3>
+        <label><input type="radio" name="size" value="medium" checked >Medium</label>
+        <label><input type="radio" name="size" value="large">Large</label>
+        <label><input type="radio" name="size" value="xl">XL</label> 
+        </div>
+          <div class= "form-group">
+        <h4>Select Your First Topping</h3>
         <label><input type="radio" name="topping1" value="Onion" >Onion</label>
         <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
         <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
@@ -24,7 +30,7 @@
         <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
-        <h3>Select Your Second Topping</h3>
+        <h4>Select Your Second Topping</h3>
         <label><input type="radio" name="topping1" value="Onion" >Onion</label>
         <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
         <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
@@ -32,7 +38,7 @@
         <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
-        <h3>Select Your Third Topping</h3>
+        <h4>Select Your Third Topping</h3>
         <label><input type="radio" name="topping1" value="Onion">Onion</label>
         <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
         <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
@@ -40,7 +46,7 @@
         <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
-        <h3>Select Your Fourth Topping</h3>
+        <h4>Select Your Fourth Topping</h3>
         <label><input type="radio" name="topping1" value="Onion" >Onion</label>
         <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
         <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
@@ -48,13 +54,14 @@
         <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
       <div class="form-group">
-        <h3>Select Your Fifth Topping</h3>
+        <h4>Select Your Fifth Topping</h3>
         <label><input type="radio" name="topping1" value="Onion">Onion</label>
         <label><input type="radio" name="topping1" value="Mushroom">Mushroom</label>
         <label><input type="radio" name="topping1" value="Black Olive">Black Olive</label> 
         <label><input type="radio" name="topping1" value="Green Bell Pepper">Green Bell Pepper</label>
         <label><input type="radio" name="topping1" value="Jalapeno">Jalapeno</label>
       </div>
+      <button type= "submit" class = "btn btn-dark">Submit</button>
     </form>
     <div id="pizza-cost">
       <p><strong>topping1:</strong> <span class="topping1"></span></p>
@@ -62,7 +69,7 @@
       <p><strong>topping3: </strong> <span class="topping3"></span></p>
       <p><strong>topping4: </strong> <span class="topping4"></span></p>
       <p><strong>topping5: </strong> <span class="topping5"></span></p>
-      <p><strong>Pizza Size</strong><span class="pizza size"></span></p>
+      <p><strong>Pizza Size</strong><span class="pizza-size"></span></p>
       <p><strong>Cost: </strong> <span class="cost"></span></p>
     </div>
   </div>
