WIP bug with submit function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <title>Pizza Planet</title>
 </head>
 <body>
+  <div class ="jumbotron">
   <h1>Welcome to Pizza Planet</h1>
+  </div>
   <div class="container">
     <form id="pizza-select">
       <div class="form-group">
@@ -61,16 +63,16 @@
         <label><input type="radio" name="topping5" value="Green Bell Pepper">Green Bell Pepper</label>
         <label><input type="radio" name="topping5" value="Jalapeno">Jalapeno</label>
       </div>
-      <button type= "submit" class = "btn btn-dark">Submit</button>
+      <button type="submit" class="btn btn-dark">Submit</button>
     </form>
     <div id="pizza-cost">
+      <p><strong>Pizza Size</strong><span class="pizza-size"></span></p>
       <p><strong>topping1:</strong> <span class="topping1"></span></p>
       <p><strong>topping2:</strong> <span class="topping2"></span></p>
       <p><strong>topping3: </strong> <span class="topping3"></span></p>
       <p><strong>topping4: </strong> <span class="topping4"></span></p>
       <p><strong>topping5: </strong> <span class="topping5"></span></p>
-      <p><strong>Pizza Size</strong><span class="pizza-size"></span></p>
-      <p><strong>Cost: </strong> <span class="cost"></span></p>
+      <p><strong> Pizza Cost: </strong> <span class="cost"></span></p>
     </div>
   </div>
 </body>
