--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       </div>
       <button type="submit" class="btn btn-dark">Submit</button>
     </form>
-    <div id="pizza-cost">
+    <div id="pizza">
       <p><strong>Pizza Size</strong><span class="pizza-size"></span></p>
-      <p><strong>topping1:</strong> <span class="topping1"></span></p>
-      <p><strong>topping2:</strong> <span class="topping2"></span></p>
-      <p><strong>topping3: </strong> <span class="topping3"></span></p>
-      <p><strong>topping4: </strong> <span class="topping4"></span></p>
-      <p><strong>topping5: </strong> <span class="topping5"></span></p>
+      <p><strong>Topping 1:</strong> <span class="topping1"></span></p>
+      <p><strong>Topping 2:</strong> <span class="topping2"></span></p>
+      <p><strong>Topping 3: </strong> <span class="topping3"></span></p>
+      <p><strong>Topping 4: </strong> <span class="topping4"></span></p>
+      <p><strong>Topping 5: </strong> <span class="topping5"></span></p>
       <p><strong> Pizza Cost: </strong> <span class="cost"></span></p>
     </div>
   </div>
